--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "better-scroll": "^1.13.2",
     "core-js": "^3.6.5",
+    "less-loader": "^7.2.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
