--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fastclick": "^1.0.6",
     "less-loader": "^7.2.1",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.6.0"
   },
@@ -21,6 +22,7 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "css-loader": "^3.6.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "style-loader": "^2.0.0",
     "stylus-loader": "^4.3.1",
     "vue-template-compiler": "^2.6.11"
